packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__layout_manager__tests__visual_tests__config1.snap
---
source: packages/nx/src/native/tui/components/layout_manager.rs
expression: terminal_config1.backend()
---
"┌Task List──────────────────────┐┌Terminal Pane 1──────────────────────────────────────────────────┐"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"└───────────────────────────────┘└─────────────────────────────────────────────────────────────────┘"
