packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__layout_manager__tests__visual_tests__slightly_narrow_screen_layout.snap
---
source: packages/nx/src/native/tui/components/layout_manager.rs
expression: terminal.backend()
---
"┌Task List───────────────┐  ┌Terminal Pane 1───────────────────────────────────┐"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"│                        │  │                                                  │"
"└────────────────────────┘  └──────────────────────────────────────────────────┘"
