packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__layout_manager__tests__visual_tests__visualize_horizontal_layout_with_two_panes.snap
---
source: packages/nx/src/native/tui/components/layout_manager.rs
expression: output
---
"┌Task List──────────────────────┐┌Terminal Pane 1──────────────────────────────────────────────────┐"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               │└─────────────────────────────────────────────────────────────────┘"
"│                               │┌Terminal Pane 2──────────────────────────────────────────────────┐"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"│                               ││                                                                 │"
"└───────────────────────────────┘└─────────────────────────────────────────────────────────────────┘"
